frontend/test/typecheck/success/index-array.fc
int foo(int[] arr) {
    return arr[0];
}
