frontend/test/typecheck/error/array-return-type.fc
int[] foo(int[] arr) {
    return arr;
}
